welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:47: error: nbBaggle is already defined as variable nbBaggle
var nbBaggle=0
    ^Poucet:1: error: not found: value n
var nbBaggle=n
             ^Poucet:5: error: not found: value n
    if (n < 3) {
        ^