welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var nbBaggle=n
while(sortieTrouvee()) {
  avance();
  for (i<-0 to 4) {
    if (n < 3) {
      droite();
    } else {
      gauche();
    }
    avance();
  }
}


































var nbBaggle=0
while (!sortieTrouvee()) {
  avance();
  if (nbBaggle<3) {
    droite();
  } else {
    gauche();
    for (i<-0 to 4) {
      avance();
    }
  }
}

